--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,3 +3,8 @@
 
 // Layouts
 @import "../layouts/BasicLayout/BasicLayout.scss";
+
+// Components
+@import "../components/Header/header.scss";
+@import "../components/Header/Topbar/Topbar.scss";
+@import "../components/Header/Menu/Menu.scss";
