--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,3 +8,4 @@
 @import "../components/Header/header.scss";
 @import "../components/Header/Topbar/Topbar.scss";
 @import "../components/Header/Menu/Menu.scss";
+@import "../components/Modal/BasicModal/BasicModal.scss";
