implementation of toast package

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,6 +1,22 @@
 // Importacion de index.scss
 @import "./index.scss";
 
-body {
-  background-color: grey;
+.ui.form {
+  .ui.input {
+    input {
+      border: 1px solid $border-grey-light;
+      font-size: 15px;
+    }
+  }
+
+  .actions {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .ui.button.submit {
+    background-color: $primary;
+    color: $font-light;
+  }
 }
