--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -5,7 +5,7 @@ $font-grey: #778;
 $font-dark: #000;
 
 $border-light: #fff;
-$border-grey-lght: #a7a7a7;
+$border-grey-light: #a7a7a7;
 $border-grey: #444444;
 
 $background-light: #fff;
