--- a/scss/global.scss
+++ b/scss/global.scss
@@ -12,7 +12,7 @@
   .actions {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
 
   .ui.button.submit {
