--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,3 +9,4 @@
 @import "../components/Header/Topbar/Topbar.scss";
 @import "../components/Header/Menu/Menu.scss";
 @import "../components/Modal/BasicModal/BasicModal.scss";
+@import "../components/Auth/LoginForm/LoginForm.scss";
