creating account page and menu login

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,6 +4,9 @@
 // Layouts
 @import "../layouts/BasicLayout/BasicLayout.scss";
 
+// Pages
+@import "../pages/account.scss";
+
 // Components
 @import "../components/Header/header.scss";
 @import "../components/Header/Topbar/Topbar.scss";
