--- a/components/Header/Menu/Menu.scss
+++ b/components/Header/Menu/Menu.scss
@@ -31,6 +31,10 @@
           background-color: $background-dark-absolute;
           color: $font-light;
         }
+
+        &.m-0 i {
+          margin: 0 !important;
+        }
       }
     }
   }
