--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,3 +13,4 @@
 @import "../components/Header/Menu/Menu.scss";
 @import "../components/Modal/BasicModal/BasicModal.scss";
 @import "../components/Auth/LoginForm/LoginForm.scss";
+@import "../components/Account/ChangeAccount.scss";
