addresses account added

--- a/components/Account/ChangeAccount.scss
+++ b/components/Account/ChangeAccount.scss
@@ -4,5 +4,18 @@
   > h4 {
     color: $primary;
     font-size: 18px;
+
+    > span {
+      font-weight: 100;
+      font-size: 12px;
+    }
+  }
+
+  > form {
+    text-align: center;
+
+    .submit {
+      padding: 12px 60px;
+    }
   }
 }
