--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,3 +14,4 @@
 @import "../components/Modal/BasicModal/BasicModal.scss";
 @import "../components/Auth/LoginForm/LoginForm.scss";
 @import "../components/Account/ChangeAccount.scss";
+@import "../components/Account/Address/Address.scss";
