--- a/layouts/BasicLayout/BasicLayout.scss
+++ b/layouts/BasicLayout/BasicLayout.scss
@@ -12,8 +12,8 @@
     -webkit-box-shadow: 0px, 0px, 10px, 0px, rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px, 0px, 10px, 0px, rgba(0, 0, 0, 0.75);
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    // &::-webkit-scrollbar {
+    //   display: none;
+    // }
   }
 }
