--- a/pages/account.scss
+++ b/pages/account.scss
@@ -1,5 +1,6 @@
 .account {
-  &_configuration {
+  &_configuration,
+  &_adresses {
     position: relative;
     padding: 10px;
 
@@ -14,6 +15,16 @@
     .data {
       background-color: $background-light;
       box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
+    }
+  }
+
+  &_adresses {
+    .title {
+      i {
+        position: absolute;
+        right: 10px;
+        color: $font-dark;
+      }
     }
   }
 }
