new updates in account(addresses added)

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -15,3 +15,4 @@
 @import "../components/Auth/LoginForm/LoginForm.scss";
 @import "../components/Account/ChangeAccount.scss";
 @import "../components/Account/Address/Address.scss";
+@import "../components/Account/ListAddress/ListAddress.scss";
