--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,6 +7,7 @@
 // Pages
 @import "../pages/index.scss";
 @import "../pages/account.scss";
+@import "../pages/games/platform.scss";
 
 // Components
 @import "../components/Header/header.scss";
@@ -18,3 +19,4 @@
 @import "../components/Account/Address/Address.scss";
 @import "../components/Account/ListAddress/ListAddress.scss";
 @import "../components/ListGames/ListGames.scss";
+@import "../components/Pagination/Pagination.scss";
