wish list finished

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,6 +8,7 @@
 @import "../pages/index.scss";
 @import "../pages/account.scss";
 @import "../pages/games/platform.scss";
+@import "../pages/whislist.scss";
 
 // Components
 @import "../components/Header/header.scss";
