--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,6 +9,7 @@
 @import "../pages/account.scss";
 @import "../pages/games/platform.scss";
 @import "../pages/whislist.scss";
+@import "../pages/search.scss";
 
 // Components
 @import "../components/Header/header.scss";
