--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,6 +10,7 @@
 @import "../pages/games/platform.scss";
 @import "../pages/whislist.scss";
 @import "../pages/search.scss";
+@import "../pages/cart.scss";
 
 // Components
 @import "../components/Header/header.scss";
