--- a/scss/index.scss
+++ b/scss/index.scss
@@ -27,3 +27,5 @@
 @import "../components/Game/TabsGame/TabsGame.scss";
 @import "../components/Game/InfoGame/InfoGame.scss";
 @import "../components/Game/CarouselScreenshots/CareouselScreenshots.scss";
+@import "../components/Cart/SummaryCart/SummaryCart.scss";
+@import "../components/Cart/AddressShipping/AddressShipping.scss";
